Show/hide form when clicking plus button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Pronto Facts</title>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header>
@@ -29,7 +30,7 @@
       </button>
     </header>
 
-    <form>
+    <form class="fact-form hidden">
       <input type="text" placeholder="Share a fact" />
       <span>200</span>
       <input type="text" placeholder="Source" />
