Update project to React

--- a/old/index.html
+++ b/old/index.html
@@ -20,7 +20,6 @@
   </head>
   <body>
     <header>
-      </div>
       <h1>
         Pronto Facts
         <span class="material-symbols-sharp check-icon"> check_box </span>
@@ -45,7 +44,7 @@
 
     <main>
       <aside>
-        <ul class="category-buttons"> 
+        <ul class="category-buttons">
           <li><button id="all-category-btn">All</button></li>
           <li>
             <button class="category-btn">Technology</button>
@@ -62,7 +61,9 @@
             <p>
               React is being developed by Meta (formerly Facebook)
               <a href="https://opensource.fb.com/" target="_blank">[Source]</a>
-              <span class="tag" style="background-color: #3b82f6">technology</span>
+              <span class="tag" style="background-color: #3b82f6"
+                >technology</span
+              >
             </p>
             <div class="fact-buttons">
               <button class="like-btn">
